feat(materials): highlight lecture and unit-start rows on anchor navigation with temporary effect

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,8 @@ website:
         text: Syllabus
       - href: materials.qmd
         text: Materials
+      - href: https://finkel-s.github.io/teaching.html
+        text: "Other Courses"
 
 format:
   html:
